[flake8]
ignore = W504, C901
exclude =
    __pycache__,
    build,
    dist,
    debian_build,
    test,
    typings,
    gajim/common/config.py,
    gajim/common/optparser.py,
    gajim/common/regex.py,
    gajim/common/socks5.py,
    gajim/gui,
max-complexity = 15
builtins=_
max-line-length = 80
statistics = True
count = True

inline-quotes = single
multiline-quotes = '''
docstring-quotes = '''

[metadata]
name = gajim
version = attr: gajim.__version__
description = A GTK XMPP client
author = Philipp Hoerist, Yann Leboulanger
author_email = gajim-devel@gajim.org
url = https://gajim.org
license = GPL v3
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.9
packages = find:
test_suite = test
install_requires =
    css-parser
    keyring
    nbxmpp>=3.2.5,<4.0.0
    packaging
    pillow
    precis-i18n>=1.0.0
    cryptography>=3.4.8
    pycairo>=1.16.0

[options.package_data]
gajim =
    data/gui/*.ui
    data/icons/hicolor/*/*/*.png
    data/icons/hicolor/*/*/*.svg
    data/other/*
    data/sounds/*.wav
    data/style/*.css
    data/plugins/*/*
    py.typed

[options.packages.find]
exclude =
    gajim.dev
    test*
