pixmapsdir = $(pkgdatadir)/data/pixmaps
pixmaps_DATA = $(srcdir)/*.png \
			   gajim.ico \
			   $(srcdir)/events/*.png \
			   $(srcdir)/agents/*.png
EXTRA_DIST = $(pixmaps_DATA)

gajimpixmapdir = $(datadir)/pixmaps
gajimpixmap_DATA = gajim.png \
				   gajim_about.png

MAINTAINERCLEANFILES = Makefile.in
