pixmapsdir = $(pkgdatadir)/data/pixmaps
pixmaps_DATA = $(srcdir)/*.png \
				gajim.svg \
			   gajim.ico

pixmapseventsdir = $(pkgdatadir)/data/pixmaps/events
pixmapsevents_DATA = $(srcdir)/events/*.png

pixmapsagentsdir = $(pkgdatadir)/data/pixmaps/agents
pixmapsagents_DATA = $(srcdir)/agents/*.png

EXTRA_DIST = $(pixmaps_DATA) $(pixmapsevents_DATA) $(pixmapsagents_DATA)

gajimpixmapdir = $(datadir)/pixmaps
gajimpixmap_DATA = gajim.png \
						gajim.svg \
						gajim_about.png

MAINTAINERCLEANFILES = Makefile.in
