pixmapsdir = $(pkgdatadir)/data/pixmaps
nobase_dist_pixmaps_DATA = \
	$(srcdir)/events/*.png \
	$(srcdir)/agents/*.png \
	$(srcdir)/*.png \
	$(srcdir)/gajim.svg \
	$(srcdir)/gajim.ico

gajimpixmapdir = $(datadir)/pixmaps
gajimpixmap_DATA = \
	$(srcdir)/gajim.png \
	$(srcdir)/gajim.svg \
	$(srcdir)/gajim_about.png

MAINTAINERCLEANFILES = Makefile.in
